<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@drawable/ic_sample">


<TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/calories"
    android:textColor="#fdfcfc"
    android:textStyle="bold"
    android:fontFamily="@font/delius"
    android:textSize="32sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.269" />

<TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cost"
    android:textSize="32sp"
    android:textColor="#fdfcfc"
    android:textStyle="bold"
    android:fontFamily="@font/delius"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.598" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="126dp"
    android:layout_height="126dp"
    android:background="@drawable/bigcircle"
    android:gravity="center"
    android:text=""
    android:textSize="22sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.164"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.816" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="126dp"
    android:layout_height="126dp"
    android:background="@drawable/bigcircle"
    android:gravity="center"
    android:text=""
    android:textSize="22sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.81"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.816" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="206dp"
    android:layout_height="50dp"
    android:background="@drawable/rounded"
    android:gravity="center"
    android:text=""
    android:textColor="#FDFCFC"
    android:textSize="24sp"
    android:textStyle="bold"
    app:fontFamily="@font/delius"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.157" />

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/compare_2_cs"
    android:textStyle="bold"
    android:fontFamily="@font/delius"
    android:textColor="#fdfcfc"
    android:textSize="42sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.049" />

<TextView
    android:id="@+id/textView16"
    android:layout_width="206dp"
    android:layout_height="50dp"
    android:background="@drawable/rounded"
    android:gravity="center"
    android:text=""
    android:textColor="#FDFCFC"
    android:textSize="24sp"
    android:textStyle="bold"
    app:fontFamily="@font/delius"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.157" />

<TextView
    android:id="@+id/textView18"
    android:layout_width="126dp"
    android:layout_height="126dp"
    android:background="@drawable/bigcircle"
    android:gravity="center"
    android:text=""
    android:textSize="22sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.164"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.409" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="126dp"
    android:layout_height="126dp"
    android:background="@drawable/bigcircle"
    android:gravity="center"
    android:text=""
    android:textSize="22sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.81"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.409" />

<Button
    android:id="@+id/button_next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/arrow"
    android:textColor="#fdfcfc"
    android:textSize="42sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.95"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>